--- a/cart/static/app/index.html
+++ b/cart/static/app/index.html
@@ -8,12 +8,13 @@
 </head>
 <body>
 	<div class="container-fluid">
-		<div class="navbar">
+		<div class="navbar" bs-navbar>
 			<div class="navbar-inner">
+				<a class="brand" href="#">Home</a>
 				<ul class="nav">
-					<li class="active"><a href="#/view1">Home</a></li>
-					<li><a href="#/view2">view1</a></li>
-					<li><a href="#/view3">view3</a></li>
+					<li data-match-route="/view1"><a href="#/view1">Home</a></li>
+					<li data-match-route="/view2"><a href="#/view2">view1</a></li>
+					<li data-match-route="/view3"><a href="#/view3">view3</a></li>
 				</ul>
 			</div>
 		</div>
@@ -26,6 +27,8 @@
   -->
   <script src="lib/angular/angular.js"></script>
   <script src="lib/angular/angular-resource.js"></script>
+  <script src="lib/ui-bootstrap-tpls-0.2.0.js"></script>
+  <script src="lib/jquery-2.0.0.min.js"></script>
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
